--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "eslint-plugin-vue": "^9.9.0",
     "less": "^4.1.3",
     "prettier": "^2.8.4",
+    "rollup-plugin-visualizer": "^5.9.0",
     "terser": "^5.16.3",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.14.3",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^1.0.24"
   }
