--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
     "eslint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
     "prettier:comment": "自动格式化当前目录下的所有文件",
-    "prettier": "prettier --write"
+    "prettier": "prettier --write",
+    "new": "plop --plopfile ./plop/plopfile.js"
+
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "less": "^4.1.3",
+    "plop": "^3.1.2",
     "prettier": "^2.8.4",
     "rollup-plugin-visualizer": "^5.9.0",
     "terser": "^5.16.3",
