--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
     "eslint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
-    "prettier:comment": "自动格式化当前目录下的所有文件",
     "prettier": "prettier --write",
     "new": "plop --plopfile ./plop/plopfile.js"
-
+  },
+  "scriptsDesc": {
+    "dev": "运行",
+    "build": "打包",
+    "preview": "预览dist目录",
+    "eslint": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js,.vue,.ts 文件",
+    "prettier": "自动格式化当前目录下的所有文件",
+    "new": "创建新的页面模块"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
